--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <div class="top">
         <div class="container">
-            <h1>This Website is awesome</h1>
+            <div class="description">This website is so cool</div>
             <p>This website has some subtext that goes here under
             the main title. It's a smaller font and the color is a lower contrast. </p>
-            <button>Sign Up</button>
+            <button class="button1">Sign Up</button>
         </div>
         <img src="coffee-cups.jpeg" alt="two mugs of coffee" width="200px">
     </div>
@@ -66,12 +66,12 @@
     <div class="bottom">
         <div>Call to action! It's time!</div>
         <div>Sign up for our product by clicking that button right over there!</div> 
-        <button>Sign Up</button>
+        <button class="button2">Sign Up</button>
     </div>
 
     <div class="footer">
         Copyright &copy; The Odin Project 
     </div>
-    
+
 </body>
 </html>
