--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
             the main title. It's a smaller font and the color is a lower contrast. </p>
             <button class="button1">Sign Up</button>
         </div>
-        <img src="coffee-cups.jpeg" alt="two mugs of coffee" width="200px">
+        <img src="coffee-cups.jpeg" alt="two mugs of coffee">
     </div>
 
-    <div>Some Random Information.</div>
+    <div class="intro">Some Random Information.</div>
 
     <div class="mid">
 
-        <div class="image-1"> 
+        <div class="image1"> 
             <img src="" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
 
-        <div class="image-2"> 
+        <div class="image2"> 
             <img src="" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
 
-        <div class="image-3"> 
+        <div class="image3"> 
             <img src="" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
 
-        <div class="image-4"> 
+        <div class="image4"> 
             <img src="" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
@@ -54,9 +54,9 @@
     </div>
 
     <div class="quote">
-        <i>This is some inspiring quote about how much this site has helped this random 
-            customer that you don't know and have never heard about. Most of the time, I think 
-            these random quotes are made up. 
+        <i>This is some inspiring quote about how much this thing has helped this random 
+            customer that you don't know and have never heard meet. Most of the time, I think 
+            these quotes are made up. But take this persons word, it changed their life. 
         </i>
         <div class="quoter">
             - some random person 
@@ -64,8 +64,8 @@
     </div>
 
     <div class="bottom">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div> 
+        <div>Call to action! It's time!
+        <div>Sign up for our product by clicking that button right over there! </div></div>
         <button class="button2">Sign Up</button>
     </div>
 
