--- a/index.html
+++ b/index.html
@@ -9,58 +9,58 @@
 <body>
 
     <div class="header">
-        <h3>Header Logo</h3>
+        <h3 class="header-logo">Coffee Logo</h3>
         <ul>
-            <li><a href=""> header link one</a></li>
-            <li><a href=""> header link two</a></li>
-            <li><a href=""> header link three</a></li>
+            <li><a href="#"> one shot</a></li>
+            <li><a href="#"> two shots</a></li>
+            <li><a href="#"> three shots</a></li>
         </ul>
     </div>
 
     <div class="top">
         <div class="container">
-            <div class="description">This website is so cool</div>
-            <p>This website has some subtext that goes here under
-            the main title. It's a smaller font and the color is a lower contrast. </p>
+            <div class="main">This website is all about coffee!</div>
+            <div class="text">I don't even drink coffee very much. I'm just basing it off 
+                pictures I have on my computer. Plus the coffee gives a pretty nice vibe. </div>
             <button class="button1">Sign Up</button>
         </div>
-        <img src="coffee-cups.jpeg" alt="two mugs of coffee">
+        <div class="right-side">
+            <img class="coffeecups" src="coffee-cups.jpeg" alt="two mugs of coffee">
+        </div>
     </div>
 
     <div class="intro">Some Random Information.</div>
 
     <div class="mid">
 
-        <div class="image1"> 
-            <img src="" alt="box"> 
+        <div class="card"> 
+            <img src="books-and-mug.jpeg" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
 
-        <div class="image2"> 
-            <img src="" alt="box"> 
+        <div class="card"> 
+            <img src="tea.jpeg" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
 
-        <div class="image3"> 
-            <img src="" alt="box"> 
+        <div class="card"> 
+            <img src="mug-on-table.JPG" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
 
-        <div class="image4"> 
-            <img src="" alt="box"> 
+        <div class="card"> 
+            <img src="dount-drink.jpg" alt="box"> 
             <div>this is some subtect under an illustation or image</div>
         </div>
 
     </div>
 
     <div class="quote">
-        <i>This is some inspiring quote about how much this thing has helped this random 
-            customer that you don't know and have never heard meet. Most of the time, I think 
-            these quotes are made up. But take this persons word, it changed their life. 
-        </i>
+        <i>Coffee coffee coffee coffee coffee coffee 
+            coffee epresso coffee coffee and coffee !</i>
         <div class="quoter">
-            - some random person 
-        </div></divs>
+            - Expert    
+        </div>
     </div>
 
     <div class="bottom">
