Update CSS and HTML to new theme and organize

--- a/index.html
+++ b/index.html
@@ -17,54 +17,54 @@
         </ul>
     </div>
 
-    <div class="top">
-        <div class="container">
+    <div class="main-content">
+        <div class="first">
             <div class="main">This website is all about coffee!</div>
-            <div class="text">I don't even drink coffee very much. I'm just basing it off 
-                pictures I have on my computer. Plus the coffee gives a pretty nice vibe. </div>
+            <div class="sub-text">I don't even drink coffee very much. I'm just basing it off 
+                pictures I have. Plus the coffee gives a pretty nice vibe. </div>
             <button class="button1">Sign Up</button>
         </div>
         <div class="right-side">
-            <img class="coffeecups" src="coffee-cups.jpeg" alt="two mugs of coffee">
+            <img class="main-image" src="coffee-cups.jpeg" alt="two mugs of coffee" width="300px">
         </div>
     </div>
 
-    <div class="intro">Some Random Information.</div>
+    <div class="mid-section">Some Random Information.</div>
 
-    <div class="mid">
+    <div class="main-mid">
 
         <div class="card"> 
             <img src="books-and-mug.jpeg" alt="box"> 
-            <div>this is some subtect under an illustation or image</div>
+            <div class="text">this a wannabe aesthetic picture of coffee on books. no harm was done to the books. </div>
         </div>
 
         <div class="card"> 
             <img src="tea.jpeg" alt="box"> 
-            <div>this is some subtect under an illustation or image</div>
+            <div class="text">this is some tea, not coffee opps. but it's good to have variTEA hehe.</div>
         </div>
 
         <div class="card"> 
             <img src="mug-on-table.JPG" alt="box"> 
-            <div>this is some subtect under an illustation or image</div>
+            <div class="text">this is actually an americano.</div>
         </div>
 
         <div class="card"> 
             <img src="dount-drink.jpg" alt="box"> 
-            <div>this is some subtect under an illustation or image</div>
+            <div class="text">this is a donut with cold brew in a can.</div>
         </div>
 
     </div>
 
     <div class="quote">
         <i>Coffee coffee coffee coffee coffee coffee 
-            coffee epresso coffee coffee and coffee !</i>
+            coffee epresso coffee coffee and coffee!</i>
         <div class="quoter">
-            - Expert    
+            - Customer, the Customer     
         </div>
     </div>
 
-    <div class="bottom">
-        <div>Call to action! It's time!
+    <div class="last">
+        <div >Call to action! It's time!
         <div>Sign up for our product by clicking that button right over there! </div></div>
         <button class="button2">Sign Up</button>
     </div>
